# anti-detr-x

./: .gitignore  README.md  cst20k_benchmark.md  model.py  pyproject.toml  requirements.txt  scripts.md  transformer.py  实验记录.md
cfg/: rtdetr-HIFI.yaml  rtdetr-MRFPN.yaml  rtdetr-WTConv.yaml  rtdetr-p2.yaml
datasets/: Anti-UAV.yaml  Hazy.yaml  UAV.yaml
docs/: CST2YOLO.md  exps_custom_modules.md  inner_iou_integration.md  rtdetr-nan_repair.md
docs/overview/: 01-project-overview.md  02-anti-detr-modules.md  03-loss-functions.md  04-metrics-and-iou.md  README.md
exp_cfg/0702/: exp1.yaml  exp2.yaml
exp_cfg/0703/: b0.yaml  b1.yaml  b2.yaml
scripts/: batch_det_heatmaps.py  batch_run0610.sh  compare_feature_responses.py  convert_irdst_to_yolo.py  export_onnx.sh  generate_0616_variant_diagrams.py  generate_arch_figures.py  generate_cst_box_stats.py  generate_detr0627_test00001_diagram.py  generate_detr0627_variant_diagrams.py  generate_detr0628_variant_diagrams.py  generate_detr0630_variant_diagrams.py  generate_detr0703_variant_diagrams.py  generate_detr0705_b5_3_diagram.py  generate_detr111_b5fix_diagrams.py  generate_detr111_b5fix_upbefore_diagrams.py  generate_model_comparison_grid.py  generate_rtdetr_query_assignment_flow.py  generate_swinv2_b2_variant_principles.py  generate_swinv2_b4_stepwise_lateral_plain_diagram.py  generate_swinv2_b5_stepwise_lateral_p4mdhifi_diagram.py  irdst20k_batch_train.sh  plot_docx_experiments.py  report_best_curves.py  run_resnet50_detr_experiments.py  run_swinv2_detr_experiments.py  search_cam_candidates.py  train_detr.py  train_yolo.py  visualize_det_heatmap.py
tools/: export_preds.py
utils/: label_win2lin.py  verify_yolo_labels.py
(+93 files in other folders)
