[project]
name = "anti-detr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate~=1.0.1",
    "addict~=2.4.0",
    "albumentations~=1.4.21",
    "attrs~=24.2.0",
    "clip~=0.2.0",
    "datasets~=3.1.0",
    "einops>=0.8.2",
    "evaluate~=0.4.3",
    "filelock~=3.14.0",
    "jinja2~=3.1.4",
    "joblib~=1.4.2",
    "librosa~=0.10.2.post1",
    "matplotlib~=3.9.2",
    "msgpack~=1.1.0",
    "nltk~=3.9.1",
    "numpy~=1.26.4",
    "onedl-mim>=0.5.1",
    "onedl-mmcv>=2.3.6",
    "onedl-mmdetection>=3.5.1",
    "onedl-mmengine>=0.10.10",
    "opencv-python~=4.10.0.84",
    "packaging~=24.1",
    "pandas~=2.2.3",
    "pillow~=10.4.0",
    "psutil~=6.1.0",
    "pycocotools~=2.0.8",
    "pydantic~=2.9.2",
    "pygments~=2.18.0",
    "python-dateutil~=2.9.0.post0",
    "pywavelets>=1.9.0",
    "pyyaml~=6.0.2",
    "regex~=2024.9.11",
    "requests~=2.32.3",
    "rich~=13.4.2",
    "sacrebleu~=2.4.3",
    "safetensors~=0.4.5",
    "scikit-learn~=1.5.2",
    "scipy~=1.13.1",
    "sentencepiece~=0.2.0",
    "seqeval~=1.2.2",
    "setuptools>=60.2.0",
    "shapely~=2.0.6",
    "six~=1.16.0",
    "soundfile~=0.12.1",
    "terminaltables~=3.1.10",
    "timm~=1.0.11",
    "tokenizers>=0.21.4",
    "torch==2.12.0",
    "torchmetrics~=1.5.1",
    "torchvision==0.27.0",
    "tqdm~=4.66.6",
    "transformers~=4.47.0",
    "typing-extensions~=4.12.2",
    "ultralytics",
    "urllib3~=1.26.20",
    "wandb~=0.18.5",
]

[tool.uv.sources]
ultralytics = { path = "ultralytics-git", editable = true }
